--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=4000
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/cuka_loc
-JWT_SECRET=supersecretjwtkey
+DATABASE_URL=postgresql://user:password@host:5432/database
+JWT_SECRET=changeme
 STRIPE_SECRET_KEY=sk_test_xxx
 STRIPE_WEBHOOK_SECRET=whsec_xxx
+FRONTEND_URL=http://localhost:3000
