--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "types": []
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
